chore: migrate to github.devtool.tech

--- a/src/html/followers.ejs
+++ b/src/html/followers.ejs
@@ -5,7 +5,7 @@
         Users Followers Ranking
       </a>
       <span class="select">
-        <a class="<%= type === 'global' ? 'active': '' %>" href="index.html">Global</a>
+        <a class="<%= type === 'global' ? 'active': '' %>" href="users.global.html">Global</a>
         <a class="<%= type === 'china' ? 'active': '' %>" href="users.china.html">China</a>
       </span>
     </li>
