--- a/src/html/header.ejs
+++ b/src/html/header.ejs
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="icon" type="image/x-icon" href="https://github.githubassets.com/favicon.ico">
-  <title> <%= title %> </title>
-  <meta name="description" content="<%= title %>">
+  <title> <%= title %> | 开发者工具箱 </title>
+  <meta name="description" content="<%= description %>">
   <style>
     * { box-sizing: border-box; }
     html, body, ul, li, h1 { margin: 0; padding: 0 }
@@ -21,7 +21,7 @@
     .title { padding: 46px 0 0 0; font-size: 18px; line-height: 24px; }
     .time, .footer { padding: 5px 0 2px 0; font-size: 12px; color: #adadad; }
     .tabs { padding: 10px 0 15px 0;}
-    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 12px; line-height: 16px; color: #0366d6; }
+    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 12px; line-height: 16px; color: #0366d6; margin: .3rem 0; }
     .tabs a.active { background: #696969; color: #efefef; }
     .footer { padding: 10px 0 30px 0; }
     .list { text-align: left; max-width: 470px; margin: 0 auto; padding-bottom: 10px; background-color: #efefef; border-radius: 5px; overflow: hidden; }
@@ -80,7 +80,7 @@
   </style>
 </head>
 <body>
-  <a href="https://github.com/jaywcjlove/github-rank" target="_blank" class="github-corner">
+  <a href="https://github.com/shfshanyue/github-rank" target="_blank" class="github-corner">
     <svg viewBox="0 0 250 250">
       <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
       <path class="octo-arm" fill="currentColor" style="transform-origin: 130px 106px;" d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"></path>
@@ -90,10 +90,10 @@
   <h1 class="title"> <%= title %> </h1>
   <div class="time">Last cache created on <%=date%> by Github API v3.</div>
   <div class="tabs">
-    <a class="<%= tabCls === 'users' ? 'active': '' %>" href="index.html">Users</a>
-    <a class="<%= tabCls === 'repos' ? 'active': '' %>" href="repos.html">Repos</a>
-    <a class="<%= tabCls === 'trending' ? 'active': '' %>" href="trending.html">Trending</a>
-    <a class="<%= tabCls === 'sifou' ? 'active': '' %>" href="sifou-daily.html">Sifou</a>
-    <a class="<%= tabCls === 'toutiao' ? 'active': '' %>" href="toutiao-7.html">开发头条</a>
+    <a class="<%= tabCls === 'toutiao' ? 'active': '' %>" href="index.html">开发者头条</a>
+    <a class="<%= tabCls === 'sifou' ? 'active': '' %>" href="sifou-daily.html">Segmentfault Top</a>
     <a class="<%= tabCls === '36kr' ? 'active': '' %>" href="36kr.html">36Kr</a>
+    <a class="<%= tabCls === 'users' ? 'active': '' %>" href="users.china.html">Github Top Users</a>
+    <a class="<%= tabCls === 'repos' ? 'active': '' %>" href="repos.html">Github Top Repos</a>
+    <a class="<%= tabCls === 'trending' ? 'active': '' %>" href="trending.html">Github Trending</a>
   </div>
