fix: href + tongji

--- a/src/html/toutiao.ejs
+++ b/src/html/toutiao.ejs
@@ -3,7 +3,7 @@
     <li class="rank-title">
       <a href="https://toutiao.io/posts/hot/7" target="_blank">头条 热门分享</a>
       <span class="select">
-        <a class="<%= day === 7 ? 'active': '' %>" href="toutiao-7.html">7天</a>
+        <a class="<%= day === 7 ? 'active': '' %>" href="/">7天</a>
         <a class="<%= day === 30 ? 'active': '' %>" href="toutiao-30.html">30天</a>
         <a class="<%= day === 90 ? 'active': '' %>" href="toutiao-90.html">90天</a>
       </span>
