--- a/src/html/header.ejs
+++ b/src/html/header.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="baidu-site-verification" content="code-1pAfOYOove" />
   <link rel="icon" type="image/x-icon" href="https://github.githubassets.com/favicon.ico">
   <title> <%= title %> | 开发者工具箱 </title>
   <meta name="description" content="<%= description %>">
@@ -21,10 +22,13 @@
     .title { padding: 46px 0 0 0; font-size: 18px; line-height: 24px; }
     .time, .footer { padding: 5px 0 2px 0; font-size: 12px; color: #adadad; }
     .tabs { padding: 10px 0 15px 0;}
-    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 12px; line-height: 16px; color: #0366d6; margin: .3rem 0; }
+    .tabs a { background: #e2e2e2; display: inline-block; padding: 3px 7px; font-size: 14px; line-height: 1.5em; color: #0366d6; margin: .3rem 0; }
     .tabs a.active { background: #696969; color: #efefef; }
     .footer { padding: 10px 0 30px 0; }
     .list { text-align: left; max-width: 470px; margin: 0 auto; padding-bottom: 10px; background-color: #efefef; border-radius: 5px; overflow: hidden; }
+
+    @media (min-width: 960px) { .list { max-width: 960px; } }
+
     .list img { width: 36px; height: 36px; border-radius: 3px; display: block; margin: 0 auto; background-color: #e2e2e2; border: 0; overflow: hidden; }
     .list a { color: #0366d6; }
     .list a:hover { color: #1600ff; }
@@ -76,6 +80,15 @@
       40%,80%{-webkit-transform:rotate(10deg); transform:rotate(10deg);}
     }
   </style>
+  <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?dbfd40923fbbfe37ed7ede2356b33032";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+  </script>
   <style>
   </style>
 </head>
@@ -90,7 +103,7 @@
   <h1 class="title"> <%= title %> </h1>
   <div class="time">Last cache created on <%=date%> by Github API v3.</div>
   <div class="tabs">
-    <a class="<%= tabCls === 'toutiao' ? 'active': '' %>" href="index.html">开发者头条</a>
+    <a class="<%= tabCls === 'toutiao' ? 'active': '' %>" href="/">开发者头条</a>
     <a class="<%= tabCls === 'sifou' ? 'active': '' %>" href="sifou-daily.html">Segmentfault Top</a>
     <a class="<%= tabCls === '36kr' ? 'active': '' %>" href="36kr.html">36Kr</a>
     <a class="<%= tabCls === 'users' ? 'active': '' %>" href="users.china.html">Github Top Users</a>
